Overlay: Added overflow: auto and max-height: 100% to resolve issue with overlay being taller than the viewport

--- a/src/plugins/overlays/overlays.scss
+++ b/src/plugins/overlays/overlays.scss
@@ -17,6 +17,8 @@
 		display: block;
 		visibility: visible;
 		z-index: 999;
+		overflow: auto;
+		max-height: 100%;
 	}
 }
 
